--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,6 +1,5 @@
 /*CP VIEWPORT VIEWPORT*/
-@media only screen and (max-width:320px) {
-  /*START OF STORE ABOUT MODS*/
+@media only screen and (max-width: 480px) {
 
   .burger_menu {
     display: block;
@@ -45,6 +44,8 @@
     left: 0;
   }
 
+  /*START OF STORE ABOUT MODS*/
+
   .overview {
     display: flex;
     flex-direction: column;
@@ -53,7 +54,7 @@
     border: none;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     overflow: visible;
-    height: 500px;
+    height: 600px;
     margin-top: 85px;
     background-color: white;
     padding-bottom: 25px;
@@ -64,7 +65,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     padding: 0 20px 20px 20px;
-    width: 20px;
+    width: 350px;
   }
   
   .overview_text {
@@ -141,7 +142,7 @@
   /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);*/
   height: 120px;
   margin-top: 30px;
-  padding: 20px;
+  padding: 40px;
   background-color: white;
 }
 
@@ -150,7 +151,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 5px;
 }
 
 .warehouse_icon p, .discount_icon p, .quality_icon p, .message_icon p {
@@ -168,7 +169,7 @@
   border: none;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   overflow: hidden;
-  height: 1000px;
+  height: 1200px;
   margin-top: 30px;
   background-color: black;
 }
@@ -182,13 +183,13 @@
   display: grid;
   justify-content: center;
   align-items: center;
-  grid-template-columns: 200px 200px 200px;
+  grid-template-columns: 150px 150px;
   gap: 15px;
 }
 
 .customers_container img {
-  height: 200px;
-  width: 200px;
+  height: 180px;
+  width: 150px;
   border-radius: 10px;
   transition: transform 0.15s;
 }
@@ -217,7 +218,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 600px;
+  width: 440px;
   flex-wrap: wrap;
 }
 
@@ -267,7 +268,7 @@
   align-items: center;
   align-self: center;
   padding: 20px;
-  width: 700px;
+  width: 400px;
   height: 150px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   margin-bottom: 10px;
@@ -289,7 +290,7 @@
   height: 150px;
   width: 900px;
   grid-template-columns:  150px 150px 150px 150px;
-  gap: 30px;
+  gap: 10px;
   margin-top: 30px;
   overflow: visible;
   margin-bottom: 20px;
@@ -297,8 +298,8 @@
 }
 
 .legal_docs img {
-  height: 150px;
-  width: 150px;
+  height: 140px;
+  width: 70px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   transform: translateY(-12%);
   transition: transform 0.15s;
@@ -333,7 +334,7 @@
   white-space: nowrap;
   scroll-behavior: smooth;
   gap: 10px;
-  width: 400px;
+  width: 280px;
 }
 
 .cards_container::-webkit-scrollbar {
@@ -412,7 +413,7 @@
 }
 
 .outro_section_description {
-  width: 500px;
+  width: 350px;
 }
 
 .outro_section_description p {
@@ -438,6 +439,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  text-align: center;
   gap: 10px;
   width: 500px;
 }
@@ -474,7 +476,7 @@
   opacity: 0.5;
 }
 
-.programmer_note {
+.programmer_note, .outro_msg {
   font-size: 10px;
 }
 }
@@ -546,7 +548,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     padding: 0 20px 20px 20px;
-    width: 460px;
+    width: 480px;
   }
   
   .overview_text {
@@ -750,7 +752,7 @@
   align-items: center;
   align-self: center;
   padding: 20px;
-  width: 450px;
+  width: 550px;
   height: 300px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   margin-bottom: 10px;
@@ -758,6 +760,7 @@
 }
 
 .legal_docs_description {
+  text-align: center;
   text-wrap: wrap;
   font-size: 15px;
   font-weight: 400;
@@ -962,7 +965,7 @@
 }
 }
 
-/*PC VIEWPORT*/
+/*TO PC VIEWPORT*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
   .burger_menu {
     display: block;
@@ -1016,7 +1019,7 @@
   border: none;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   overflow: visible;
-  height: 300px;
+  height: 380px;
   margin-top: 85px;
   background-color: white;
 }
@@ -1024,8 +1027,8 @@
 .overview_informations {
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
   width: 500px;
+  padding: 20px;
 }
 
 .overview_text {
@@ -1057,6 +1060,7 @@
 .embedded_yt {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   border-radius: 20px;
+  align-self: center;
 }
 
 .visit_now {
@@ -1110,6 +1114,7 @@
 
 .warehouse_icon p, .discount_icon p, .quality_icon p, .message_icon p {
   font-size: 13px;
+  text-align: center;
   margin-bottom: 0;
 }
 
@@ -1122,7 +1127,7 @@
   border: none;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   overflow: visible;
-  height: 800px;
+  height: 1000px;
   margin-top: 30px;
   background-color: black;
 }
@@ -1136,7 +1141,7 @@
   display: grid;
   justify-content: center;
   align-items: center;
-  grid-template-columns: 200px 200px 200px 200px;
+  grid-template-columns: 200px 200px 200px;
   gap: 15px;
 }
 
@@ -1169,7 +1174,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 500px;
+  width: 400px;
 }
 
 .map_info p {
@@ -1215,7 +1220,7 @@
   align-items: center;
   align-self: center;
   padding: 20px;
-  width: 900px;
+  width: 950px;
   height: 150px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   margin-bottom: 20px;
@@ -1236,7 +1241,7 @@
   border: none;
   height: 150px;
   width: 900px;
-  grid-template-columns:  200px 200px 200px 200px;
+  grid-template-columns:  180px 180px 180px 180px;
   column-gap: 30px;
   margin-top: 30px;
   overflow: visible;
@@ -1245,8 +1250,8 @@
 }
 
 .legal_docs img {
-  height: 150px;
-  width: 200px;
+  height: 130px;
+  width: 100%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   transform: translateY(-12%);
   transition: transform 0.15s;
@@ -1410,7 +1415,7 @@
 }
 
 .outro_section_description {
-  width: 500px;
+  width: 300px;
 }
 
 .outro_section_description p {
@@ -1475,472 +1480,4 @@
 .programmer_note {
   font-size: 10px;
 }
-}
-
-/*WIDER MONITOR*/
-@media only screen and (min-width: 1024px) { 
-
-  /*START OF STORE ABOUT MODS*/
-
-.overview {
-  display: flex;
-  justify-content: space-around;
-  border: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  overflow: visible;
-  height: 300px;
-  margin-top: 85px;
-  background-color: white;
-}
-
-.overview_informations {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  width: 700px;
-}
-
-.overview_text {
-  display: inline-block;
-  color: red;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  white-space: nowrap;
-  overflow: hidden;
-  animation: typewriter 4s steps(40) infinite;
-}
-
-@keyframes typewriter {
-  from {
-      width: 0;
-  }
-  to {
-      width: 100%;
-  }
-}
-
-.overview_description {
-  font-size: 15px;
-  font-weight: 400;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-
-.embedded_yt {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-  border-radius: 20px;
-}
-
-.visit_now {
-  display: block;
-  margin: auto;
-  font-size: 15px;
-  font-weight: 600;
-  color: red;
-  background-color: white;
-  border: 1px solid black;
-  border-radius: 35px;
-  height: 50px;
-  width: 120px;
-  cursor: pointer;
-  transition: background-color 0.15s;
-}
-
-.visit_now a {
-  text-decoration: none;
-  color: inherit;
-}
-
-.visit_now:hover {
-  background-color: black;
-  color: white;
-  opacity: 0.9;
-}
-
-/*START OF ICON ADDS MODS*/
-
-.services_icons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  gap: 100px;
-  border: none;
-  /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);*/
-  height: 120px;
-  margin-top: 30px;
-  background-color: white;
-}
-
-.warehouse_icon, .discount_icon, .quality_icon, .message_icon {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-
-.warehouse_icon p, .discount_icon p, .quality_icon p, .message_icon p {
-  font-size: 13px;
-  margin-bottom: 0;
-}
-
-/*START OF CUSTOMERS MODS*/
-
-.customers_sample {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  border: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  overflow: visible;
-  height: 600px;
-  margin-top: 30px;
-  background-color: black;
-}
-
-.customers_title h1 {
-  color: white;
-  text-align: center;
-}
-
-.customers_container {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  grid-template-columns: 200px 200px 200px 200px 200px;
-  gap: 15px;
-}
-
-.customers_container img {
-  height: 200px;
-  width: 100%;
-  border-radius: 10px;
-  transition: transform 0.15s;
-}
-
-.customers_container img:hover {
-  transform: scale(1.15);
-  z-index: 1;
-}
-
-/*START OF LOC MODS*/
-
-.store_loc_info {
-  display: flex;
-  justify-content: space-around;
-  border: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  height: 300px;
-  margin-top: 30px;
-  overflow: visible;
-  background-color: white;
-}
-
-.map_info {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 600px;
-}
-
-.map_info p {
-  font-size: 15px;
-  font-weight: 400;
-}
-
-.gmap {
-  border-radius: 10px;
-}
-
-/*START OF FB MODS*/
-
-.official_fb {
-  display: flex;
-  justify-content: space-around;
-  border: none;
-  height: 500px;
-  margin-top: 30px;
-  overflow: visible;
-  background-color: white;
-}
-
-.embedded_page {
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-
-.fb_elements {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-
-.docs_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  padding: 20px;
-  width: 900px;
-  height: 150px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  margin-bottom: 20px;
-  background-color: black;
-}
-
-.legal_docs_description {
-  font-size: 15px;
-  font-weight: 400;
-  color: white;
-}
-
-.legal_docs {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  height: 150px;
-  width: 900px;
-  grid-template-columns:  200px 200px 200px 200px;
-  column-gap: 30px;
-  margin-top: 30px;
-  overflow: visible;
-  margin-bottom: 20px;
-  background-color: white;
-}
-
-.legal_docs img {
-  height: 200px;
-  width: 200px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  transform: translateY(-12%);
-  transition: transform 0.15s;
-  border-radius: 20px;
-}
-
-.legal_docs img:hover {
-  transform: scale(1.35);
-  z-index: 1;
-}
-
-/*START OF SLIDER MODS*/
-
-.slider {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  border: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  height: 350px;
-  margin-top: 30px;
-  overflow: hidden;
-  align-self: center;
-  background-color: white;
-}
-
-.cards_container {
-  position: relative;
-  display: flex;
-  overflow-x: auto;
-  white-space: nowrap;
-  scroll-behavior: smooth;
-  gap: 10px;
-  width: 400px;
-}
-
-.cards_container::-webkit-scrollbar {
-  display: none;
-}
-
-.cards_item {
-  height: 270px;
-  width: 220px;
-  background-color: black;
-  border-radius: 12px;
-  display: inline-block;
-  vertical-align: top;
-}
-
-.cards_item img {
-  height: 200px;
-  width: 220px;
-  border-radius: 12px;
-  border: 1px solid white;
-}
-
-.cards_item h5 {
-  text-align: center;
-  color: white;
-}
-
-.prev_button, .next_button {
-  border-radius: 15px;
-  border: none;
-  margin: 10px 10px 10px 10px;
-  cursor: pointer;
-  height: 35px;
-  width: 35px;
-  text-align: center;
-  align-self: center;
-  background-color: white;
-  color: black;
-  border: 1px solid black;
-}
-
-.products_title {
-  width: 135px;
-}
-
-.products_title h1 {
-  display: inline-block;
-  white-space: nowrap;
-  overflow: hidden;
-}
-
-.temp_cards_container {
-  display: flex;
-}
-
-/*START OF ICONS MODS*/
-
-.sliding_icons {
-  margin-top: 30px;
-  position: relative;
-  overflow: hidden;
-  padding: 20px 0;
-  background-color: silver;
-  white-space: nowrap;
-}
-
-.icons_container {
-  display: inline-block;
-  animation: 5s slide infinite linear;
-}
-
-.icons_container img {
-  height: 30px;
-  margin: 0 40px;
-}
-
-.sliding_icons:hover .icons_container {
-  animation-play-state: paused;
-}
-
-@keyframes slide {
-  from {
-    transform: translateX(0);
-  } 
-  to {
-    transform: translateX(-100%);
-  }
-}
-
-.sliding_icons::before, .sliding_icons::after {
-  position: absolute;
-  top: 0;
-  width: 250px;
-  height: 100%;
-  content: "";
-  z-index: 2;
-}
-
-.sliding_icons::before {
-  left: 0;
-  background: linear-gradient(to left, rgba(255, 255, 255, 0), white);
-}
-
-.sliding_icons::after {
-  right: 0;
-  background: linear-gradient(to right, rgba(255, 255, 255, 0), white);
-}
-
-/*START OF OUTRO PRODUCTS*/
-
-.outro_section {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  border: none;
-  overflow: visible;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  height: 300px;
-  margin-top: 50px;
-  background-color: black;
-}
-
-.outro_section img {
-  height: 350px; 
-  border-radius: 5px;
-  transform: translateY(0%);
-}
-
-.outro_section_description {
-  width: 500px;
-}
-
-.outro_section_description p {
-  color: white;
-}
-
-/*START OF CONTACT MODS*/
-
-.contact_section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  height: 300px;
-  margin-top: 50px;
-  background-color: white;
-  padding: 20px 0;
-}
-
-.connect_to_us {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 10px;
-  width: 500px;
-}
-
-.buttons_container {
-  width: 230px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
-}
-
-.fb_button, .email_button, .youtube_button {
-  height: 50px;
-  width: 50px;
-  border-radius: 10px;
-  border: none;
-  transition: opacity 0.15s;
-  cursor: pointer;
-}
-
-.fb_button {
-  background-color: #0165E1;
-}
-
-.email_button {
-  background-color: black;
-}
-
-.youtube_button {
-  background-color: #FF0000;
-}
-
-.buttons_container button:hover {
-  opacity: 0.5;
-}
-
-.programmer_note {
-  font-size: 10px;
-}
-
 }
