--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,488 +1,11 @@
 /*CP VIEWPORT VIEWPORT*/
-@media only screen and (max-width: 480px) {
-
-  .burger_menu {
-    display: block;
-  }
-
-  .burger_menu.active .bar:nth-child(2) {
-    opacity: 0;
-  }
-
-  .burger_menu.active .bar:nth-child(1) {
-    transform: translateY(10px) rotate(40deg);
-  }
-
-  .burger_menu.active .bar:nth-child(3) {
-    transform: translateY(-15px) rotate(-40deg);
-  }
-
-  .header_nav {  /*UL*/
-    position: fixed;
-    left: -100%;
-    top: 0;
-    gap: 0;
-    margin: 0;
-    flex-direction: column;
-    background-color: white;
-    width: 100%;
-    text-align: center;
-    transition: 0.3s;
-    list-style: none;
-  }
-
-  .header_nav a {
-    text-decoration: none;
-  }
-
-  .header_nav li {  /*LI*/
-    display: block;
-    margin: 16px 0;
-  }
-
-  .header_nav.active {
-    left: 0;
-  }
-
-  /*START OF STORE ABOUT MODS*/
-
-  .overview {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border: none;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    overflow: visible;
-    height: 600px;
-    margin-top: 85px;
-    background-color: white;
-    padding-bottom: 25px;
-  }
-
-  .overview_informations {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    padding: 0 20px 20px 20px;
-    width: 350px;
-  }
-  
-  .overview_text {
-    display: inline-block;
-    width: 100%;
-    position: relative;
-    color: red;
-    margin: 15px 0 15px 0;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-  
-  @keyframes typewriter {
-    from {
-        width: 0;
-    }
-    to {
-        width: 100%;
-    }
-  }
-  
-  .overview_description {
-    font-size: 15px;
-    font-weight: 400;
-    text-wrap: wrap;
-    margin-top: 0;
-    margin-bottom: 0;
-    text-align: center;
-  }
-  
-  .embedded_yt {
-    align-self: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    border-radius: 20px;
-    width: 250px;
-    height: 200px;
-  }
-  
-  .visit_now {
-    display: block;
-    margin: 15px auto;
-    font-size: 15px;
-    font-weight: 600;
-    color: red;
-    background-color: white;
-    border: 1px solid black;
-    border-radius: 35px;
-    height: 50px;
-    width: 120px;
-    cursor: pointer;
-    transition: background-color 0.15s;
-  }
-  
-  .visit_now a {
-    text-decoration: none;
-    color: inherit;
-  }
-  
-  .visit_now:hover {
-    background-color: black;
-    color: white;
-    opacity: 0.9;
-  }
-
-  /*START OF ICON ADDS MODS*/
-
-.services_icons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: row;
-  gap: 100px;
-  border: none;
-  /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);*/
-  height: 120px;
-  margin-top: 30px;
-  padding: 40px;
-  background-color: white;
-}
-
-.warehouse_icon, .discount_icon, .quality_icon, .message_icon {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
-}
-
-.warehouse_icon p, .discount_icon p, .quality_icon p, .message_icon p {
-  font-size: 12px;
-  margin-bottom: 0;
-  text-align: center;
-}
-
-/*START OF CUSTOMERS MODS*/
-
-.customers_sample {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  border: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  overflow: hidden;
-  height: 1200px;
-  margin-top: 30px;
-  background-color: black;
-}
-
-.customers_title h1 {
-  color: white;
-  text-align: center;
-}
-
-.customers_container {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  grid-template-columns: 150px 150px;
-  gap: 15px;
-}
-
-.customers_container img {
-  height: 180px;
-  width: 150px;
-  border-radius: 10px;
-  transition: transform 0.15s;
-}
-
-.customers_container img:hover {
-  transform: scale(1.10);
-  z-index: 1;
-}
-
-/*START OF LOC MODS*/
-
-.store_loc_info {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  border: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  height: 500px;
-  margin-top: 30px;
-  overflow: visible;
-  background-color: white;
-}
-
-.map_info {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 440px;
-  flex-wrap: wrap;
-}
-
-.map_info p {
-  font-size: 15px;
-  text-align: center;
-  text-wrap: wrap;
-  font-weight: 400;
-  margin-top: 0;
-}
-
-.gmap {
-  border-radius: 10px;
-}
-
-/*START OF FB MODS*/
-
-.official_fb {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  border: none;
-  height: 800px;
-  margin-top: 30px;
-  overflow: visible;
-  background-color: white;
-}
-
-.embedded_page {
-  box-shadow: 0 0 10px rgba(114, 60, 60, 0.5);
-  height: 400px;
-}
-
-.fb_elements {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  margin-top: 20px;
-}
-
-.docs_container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-self: center;
-  padding: 20px;
-  width: 400px;
-  height: 150px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  margin-bottom: 10px;
-  background-color: black;
-}
-
-.legal_docs_description {
-  text-wrap: wrap;
-  font-size: 15px;
-  font-weight: 400;
-  color: white;
-}
-
-.legal_docs {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  height: 150px;
-  width: 900px;
-  grid-template-columns:  150px 150px 150px 150px;
-  gap: 10px;
-  margin-top: 30px;
-  overflow: visible;
-  margin-bottom: 20px;
-  background-color: white;
-}
-
-.legal_docs img {
-  height: 140px;
-  width: 70px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  transform: translateY(-12%);
-  transition: transform 0.15s;
-  border-radius: 20px;
-}
-
-.legal_docs img:hover {
-  transform: scale(1.15);
-  z-index: 1;
-}
-
-/*START OF SLIDER MODS*/
-
-.slider {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  height: 400px;
-  margin-top: 30px;
-  overflow: hidden;
-  align-self: center;
-  background-color: white;
-}
-
-.cards_container {
-  position: relative;
-  display: flex;
-  overflow-x: auto;
-  white-space: nowrap;
-  scroll-behavior: smooth;
-  gap: 10px;
-  width: 280px;
-}
-
-.cards_container::-webkit-scrollbar {
-  display: none;
-}
-
-.cards_item {
-  height: 270px;
-  width: 220px;
-  background-color: black;
-  border-radius: 12px;
-  display: inline-block;
-  vertical-align: top;
-}
-
-.cards_item img {
-  height: 200px;
-  width: 220px;
-  border-radius: 12px;
-  border: 1px solid white;
-}
-
-.cards_item h5 {
-  text-align: center;
-  color: white;
-}
-
-.prev_button, .next_button {
-  border-radius: 15px;
-  border: none;
-  margin: 10px 10px 10px 10px;
-  cursor: pointer;
-  height: 35px;
-  width: 35px;
-  text-align: center;
-  align-self: center;
-  background-color: white;
-  color: black;
-  border: 1px solid black;
-}
-
-.products_title {
-  width: 135px;
-}
-
-.products_title h1 {
-  display: inline-block;
-  white-space: nowrap;
-  overflow: hidden;
-  margin-top: 0;
-}
-
-.temp_cards_container {
-  display: flex;
-}
-
-/*START OF OUTRO PRODUCTS*/
-
-.outro_section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  border: none;
-  overflow: visible;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  height: 600px;
-  margin-top: 30px;
-  background-color: black;
-}
-
-.outro_section img {
-  height: 350px; 
-  border-radius: 5px;
-  transform: translateY(0%);
-}
-
-.outro_section_description {
-  width: 350px;
-}
-
-.outro_section_description p {
-  color: white;
-}
-
-/*START OF CONTACT MODS*/
-
-.contact_section {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: none;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  height: 300px;
-  margin-top: 50px;
-  background-color: white;
-  padding: 20px 0;
-}
-
-.connect_to_us {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  gap: 10px;
-  width: 500px;
-}
-
-.buttons_container {
-  width: 230px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 20px;
-}
-
-.fb_button, .email_button, .youtube_button {
-  height: 50px;
-  width: 50px;
-  border-radius: 10px;
-  border: none;
-  transition: opacity 0.15s;
-  cursor: pointer;
-}
-
-.fb_button {
-  background-color: #0165E1;
-}
-
-.email_button {
-  background-color: black;
-}
-
-.youtube_button {
-  background-color: #FF0000;
-}
-
-.buttons_container button:hover {
-  opacity: 0.5;
-}
-
-.programmer_note, .outro_msg {
-  font-size: 10px;
-}
-}
 
 /*TABLET VIEWPORT*/
 @media only screen and (max-width: 767px) {
+
+  .remon_trading_logo {
+    margin: 0;
+  }
 
   .burger_menu {
     display: block;
@@ -967,6 +490,11 @@
 
 /*TO PC VIEWPORT*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
+
+  .remon_trading_logo {
+    margin: 0;
+  }
+
   .burger_menu {
     display: block;
   }
@@ -1481,3 +1009,6 @@
   font-size: 10px;
 }
 }
+
+/* @media only screen and (min-width: 1024px) { 
+} */
