--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -760,7 +760,7 @@
   align-items: center;
   align-self: center;
   padding: 20px;
-  width: 950px;
+  width: 980px;
   height: 150px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   margin-bottom: 20px;
@@ -772,6 +772,8 @@
   font-weight: 400;
   color: white;
   text-align: center;
+  text-wrap: wrap;
+  width: 800px;
 }
 
 .legal_docs {
