--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -69,7 +69,7 @@
     flex-direction: column;
     flex-wrap: wrap;
     padding: 20px 20px 20px 20px;
-    width: 300px;
+    width: 330px;
   }
   
   .overview_text {
@@ -148,7 +148,7 @@
   /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);*/
   height: 120px;
   margin-top: 30px;
-  padding: 60px;
+  padding: 50px;
   background-color: white;
 }
 
@@ -157,7 +157,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 5px;
+  column-gap: 40px;
   width: 300px;
 }
 
@@ -301,7 +301,7 @@
   border: none;
   height: 150px;
   width: 900px;
-  grid-template-columns:  75px 75px 75px 75px;
+  grid-template-columns:  80px 80px 80px 80px;
   gap: 20px;
   margin: 5px;
   overflow: visible;
@@ -310,7 +310,7 @@
 }
 
 .legal_docs img {
-  height: 75px;
+  height: 100px;
   width: 100%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   transform: translateY(-12%);
@@ -319,7 +319,7 @@
 }
 
 .legal_docs img:hover {
-  transform: scale(1.10);
+  transform: scale(1.35);
   z-index: 1;
 }
 
