--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -41,6 +41,7 @@
 
   .header_nav li {  /*LI*/
     display: block;
+    text-align: center;
     margin: 16px 0;
   }
 
@@ -148,7 +149,7 @@
   /*box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);*/
   height: 120px;
   margin-top: 30px;
-  padding: 50px;
+  padding: 20px;
   background-color: white;
 }
 
@@ -158,7 +159,7 @@
   justify-content: center;
   align-items: center;
   column-gap: 40px;
-  width: 300px;
+  width: 500px;
 }
 
 .warehouse_icon p, .discount_icon p, .quality_icon p, .message_icon p {
