--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -25,6 +25,7 @@
     position: fixed;
     left: -100%;
     top: 0;
+    right: -100%;
     gap: 0;
     margin: 0;
     flex-direction: column;
@@ -42,6 +43,7 @@
   .header_nav li {  /*LI*/
     display: block;
     text-align: center;
+    padding-right: 30px;
     margin: 16px 0;
   }
 
@@ -252,10 +254,11 @@
   justify-content: center;
   flex-direction: column;
   border: none;
-  height: 800px;
+  height: 1000px;
   margin-top: 30px;
   overflow: visible;
   background-color: white;
+  padding-bottom: 100px;
 }
 
 .embedded_page {
@@ -302,7 +305,7 @@
   border: none;
   height: 150px;
   width: 900px;
-  grid-template-columns:  80px 80px 80px 80px;
+  grid-template-columns:  150px 150px;
   gap: 20px;
   margin: 5px;
   overflow: visible;
@@ -311,7 +314,7 @@
 }
 
 .legal_docs img {
-  height: 100px;
+  height: 120px;
   width: 100%;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   transform: translateY(-12%);
@@ -402,6 +405,17 @@
 
 .temp_cards_container {
   display: flex;
+}
+
+/*START OF SLIDING ICONS MODS*/
+
+.sliding_icons::before, .sliding_icons::after {
+  position: absolute;
+  top: 0;
+  width: 100px;
+  height: 100%;
+  content: "";
+  z-index: 2;
 }
 
 /*START OF OUTRO PRODUCTS*/
@@ -545,6 +559,7 @@
   .header_nav li {  /*LI*/
     display: block;
     margin: 16px 0;
+    padding-right: 30px;
   }
 
   .header_nav.active {
